--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
     <title>Szamrendszer Konverzio</title>
 </head>
 <body>
-    
-    <h1>Szám konvertáló</h1>
-
-    <form id="form">
-        <label for="szam">Szám (10-esben):</label>
-        <input type="number" id="numberInput">
-        <label for="szamrendszer">Számrendszer:</label>
-        <input type="number" id="szamrendszerInput">
-        <button type="submit">Convert</button>
-    </form>
-    <script src="main.js"></script>
+    <script src="area.js"></script>
+    <!--<script src="main.js"></script> -->
+    <script src="kitero.js"></script>
 </body>
 </html>
