Nem tökeletes de mar majdnem kesz. Kellenek az osztalyok bele rendesen.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szamrendszer Konverzio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="area.js"></script>
-    <!--<script src="main.js"></script> -->
-    <script src="kitero.js"></script>
+    <script src="main.js"></script>
+    <!--<script src="kitero.js"></script>-->
 </body>
 </html>
