Van manager es sikeresen minden müködik, meg komentezes es kesz

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="manager.js"></script>
     <script src="area.js"></script>
     <script src="main.js"></script>
     <!--<script src="kitero.js"></script>-->
